--- a/menu_the_enchanted_note.html
+++ b/menu_the_enchanted_note.html
@@ -18,192 +18,177 @@
 </head>
 
 <body class="enchanted-note--bg-page">
-
+    <!--loader affiché avant apparition de la page d'accueil-->
     <div class="loader">
+        <!--divs contenant le logo animé-->
         <div class="loader__heading">
             <div>Oh</div>
             <div>my</div>
             <div>food </div>
         </div>
+        <!--divs contenant les points animés-->
         <div class="loader-dots">
             <div></div>
             <div></div>
             <div></div>
         </div>
     </div>
-
+    <!--entête contenant l'icone servant de lien vers la page d'accueil et le logo du site-->
     <header class="header-menu">
-
-        <div class="header-menu__return"><a href="index.html" title="retour à la page d'accueil"><i
-                    class="fa-solid fa-arrow-left"></i></a></div>
+        <div class="header-menu__return">
+            <a href="index.html" title="retour à la page d'accueil"><i class="fa-solid fa-arrow-left"></i></a>
+        </div>
         <h1 class="logo">ohmyfood</h1>
-
     </header>
-
+    <!--div contenant l'image de présentation du restaurant -->
     <div class="heading-image">
         <img class="heading-image__second-dimension" src="assets/img/La_note_enchantée.jpg"
             alt="restaurant la note enchantée">
     </div>
-
+    <!--conteneur des menus-->
     <main class="menu-main-container">
-
+        <!--div contenant le titre avec le nom du restaurant et le bouton pour liker-->
         <div class="menu-main-container__heading">
-
+            <!--titre contenant le nom du restaurant-->
             <h1>La note enchantée</h1>
-
-            <button class="like like--menu-position"><span class="like__before"><i
-                        class="fa-regular fa-heart"></i></span><span class="like__after"><i
-                        class="fa-solid fa-heart"></i></span></button>
-
+            <!--bouton avec 2 icones en forme de coeur, le deuxième apparaît au clic en version mobile ou au survol pour les version tablettes et desktop-->
+            <button class="like like--menu-position">
+                <span class="like__before"><i class="fa-regular fa-heart"></i></span>
+                <span class="like__after"><i class="fa-solid fa-heart"></i></span>
+            </button>
         </div>
-
+        <!--section contenant les menus des entrées-->
         <section class="menu">
 
             <div class="menu__title-container">
-
+                <!--partie "entrées" avec un titre et une div pour le soulignement-->
                 <h2 class="menu__heading menu__heading--larger">ENTRÉES</h2>
                 <div class="menu__underline menu__heading--larger"></div>
-
             </div>
-
+            <!-- conteneur de l'entrée permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--first-apparition">
-
+                <!--div contenant les éléments de l'entrée : titre, parapgraphe et le check pour sélectionner l'entrée-->
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Ravioles de foie gras</h3>
                     <p class="menu__details">Accompagnés de leur crème à la truffe<span class="menu__price">25 €</span>
                     </p>
-
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur de l'entrée permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--second-apparition">
-
+                <!--div contenant les éléments de l'entrée : titre, parapgraphe et le check pour sélectionner l'entrée-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Caviar osciètre</h3>
                     <p class="menu__details">Sur blini à la farine de blé noir<span class="menu__price">35 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur de l'entrée permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--third-apparition">
-
+                <!--div contenant les éléments de l'entrée : titre, parapgraphe et le check pour sélectionner l'entrée-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Homard et espuma de pommes de terre</h3>
-
                     <p class="menu__details">Mariné aux zests d'orange<span class="menu__price">20 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur de l'entrée permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--fourth-apparition">
-
+                <!--div contenant les éléments de l'entrée : titre, parapgraphe et le check pour sélectionner l'entrée-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Foie gras de canard cuit entier</h3>
-
                     <p class="menu__details">Confiture de figue et pain toasté<span class="menu__price">35 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
 
         </section>
-
+        <!--section contenant les menus des plats-->
         <section class="menu">
-
+            <!--partie "plats" avec un titre et une div pour le soulignement-->
             <div class="menu__title-container">
-
                 <h2 class="menu__heading">PLATS</h2>
-
                 <div class="menu__underline"></div>
-
             </div>
 
+            <!-- conteneur du plat permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--first-apparition">
-
+                <!--div contenant les éléments du plat : titre, parapgraphe et le check pour sélectionner le plat-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Noix de coquilles Saint-Jacques</h3>
                     <p class="menu__details">Sur lit de purée céleri-rave<span class="menu__price">40 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur du plat permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--second-apparition">
-
+                <!--div contenant les éléments du plat : titre, parapgraphe et le check pour sélectionner le plat-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Langoustine poêlée</h3>
                     <p class="menu__details">Purée de patate douce<span class="menu__price">35 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur du plat permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--third-apparition">
-
+                <!--div contenant les éléments du plat : titre, parapgraphe et le check pour sélectionner le plat-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Mijoté de queue de boeuf</h3>
-
                     <p class="menu__details">Et riz sauvage aux zests de citron<span class="menu__price">44 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
 
         </section>
-
+        <!--section contenant les menus des desserts-->
         <section class="menu">
-
+            <!--partie "desserts" avec un titre et une div pour le soulignement-->
             <div class="menu__title-container">
-
                 <h2 class="menu__heading">DESSERTS</h2>
                 <div class="menu__underline"></div>
-
             </div>
-
+            <!-- conteneur du dessert permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--first-apparition">
-
+                <!--div contenant les éléments du dessert : titre, paragraphe et le check pour sélectionner le dessert-->
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Macaron noisette et chocolat</h3>
                     <p class="menu__details">Glace au caramel brun et sel de Guérande<span class="menu__price">18
                             €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur du dessert permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--second-apparition">
-
+                <!--div contenant les éléments du dessert : titre, paragraphe et le check pour sélectionner le dessert-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Baba au rhum revisité</h3>
                     <p class="menu__details">Avec son coulis de citron<span class="menu__price">22 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur du dessert permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--third-apparition">
-
+                <!--div contenant les éléments du dessert : titre, paragraphe et le check pour sélectionner le dessert-->
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Tarte au citron meringuée</h3>
                     <p class="menu__details">Destructurée<span class="menu__price">23 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
 
         </section>
-
+        <!--div avec bouton pour commander les plats-->
         <div class="button-container">
             <button class="button-action">
                 Commander
@@ -213,18 +198,20 @@
     </main>
 
     <footer>
+        <!--pied de page avec le menu de navigation pour le site-->
         <nav class="nav">
+            <!--logo du site-->
             <h2 class="nav__logo">ohmyfood</h2>
+            <!--liste des liens du site-->
             <ul class="nav__container">
-                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
-                            class="fa-solid fa-utensils"></i>Proposer un
-                        restaurant</a></li>
-                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
-                            class="fa-solid fa-handshake-angle fa-sm"></i>Devenir
-                        partenaire</a></li>
+                <!--premier lien avec une icone qui renverrons vers les propositions de restaurants-->
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <!--deuxième lien avec une icone qui renverrons vers les propositions de partenariat-->
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i class="fa-solid fa-handshake-angle fa-sm"></i>Devenir partenaire</a></li>
+                <!--troisième lien qui renverra vers les mentions légales-->
                 <li><a class="nav__link nav__link--color" href="#" title="click here">Mentions légales</a></li>
-                <li><a class="nav__link nav__link--color" href="mailto:example@example.com"
-                        title="click here">Contact</a></li>
+                <!--quatrième lien qui renvoie et active le mail de contact-->
+                <li><a class="nav__link nav__link--color" href="mailto:example@example.com" title="click here">Contact</a></li>
             </ul>
         </nav>
     </footer>
