--- a/menu_french_style.html
+++ b/menu_french_style.html
@@ -18,179 +18,164 @@
 </head>
 
 <body class="french-style--bg-page">
-
+    <!--loader affiché avant apparition de la page d'accueil-->
     <div class="loader">
+        <!--divs contenant le logo animé-->
         <div class="loader__heading">
             <div>Oh</div>
             <div>my</div>
             <div>food </div>
         </div>
+        <!--divs contenant les points animés-->
         <div class="loader-dots">
             <div></div>
             <div></div>
             <div></div>
         </div>
     </div>
-
+    <!--entête contenant l'icone servant de lien vers la page d'accueil et le logo du site-->
     <header class="header-menu">
-
-        <div class="header-menu__return"><a href="index.html" title="retour à la page d'accueil"><i
-                    class="fa-solid fa-arrow-left"></i></a></div>
-        <h1 class="logo">ohmyfood</h1>
-
-    </header>
-
-    <div class="heading-image">
-        <img class="heading-image__first-dimension" src="assets/img/A_la_Française.jpg"
-            alt="restaurant à la Française">
-    </div>
-
-    <main class="menu-main-container">
-
-        <div class="menu-main-container__heading">
-
-            <h1>À la française</h1>
-
-            <button class="like like--menu-position"><span class="like__before"><i
-                        class="fa-regular fa-heart"></i></span><span class="like__after"><i
-                        class="fa-solid fa-heart"></i></span></button>
-
+        <div class="header-menu__return">
+            <a href="index.html" title="retour à la page d'accueil"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
-
+        <div class="logo">ohmyfood</div>
+    </header>
+    <!--div contenant l'image de présentation du restaurant -->
+    <div class="heading-image">
+        <img class="heading-image__first-dimension" src="assets/img/A_la_Française.jpg" alt="restaurant à la Française">
+    </div>
+    <!--conteneur des menus-->
+    <main class="menu-main-container">
+        <!--div contenant le titre avec le nom du restaurant et le bouton pour liker-->
+        <div class="menu-main-container__heading">
+            <!--titre contenant le nom du restaurant-->
+            <h1>À la française</h1>
+            <!--bouton avec 2 icones en forme de coeur, le deuxième apparaît au clic en version mobile ou au survol pour les version tablettes et desktop-->
+            <button class="like like--menu-position">
+                <span class="like__before"><i class="fa-regular fa-heart"></i></span>
+                <span class="like__after"><i class="fa-solid fa-heart"></i></span>
+            </button>
+        </div>
+        <!--section contenant les menus des entrées-->
         <section class="menu">
-
+            <!--partie "entrées" avec un titre et une div pour le soulignement-->
             <div class="menu__title-container">
-
                 <h2 class="menu__heading">ENTRÉES</h2>
                 <div class="menu__underline"></div>
-
             </div>
-
+            <!-- conteneur de l'entrée permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--first-apparition">
-
+                <!--div contenant les éléments de l'entrée : titre, parapgraphe et le check pour sélectionner l'entrée-->
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Tartare de poulpe acidulé</h3>
                     <p class="menu__details">Aux zests d'orange<span class="menu__price">25 €</span></p>
-
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur de l'entrée permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--second-apparition">
-
+                <!--div contenant les éléments de l'entrée : titre, parapgraphe et le check pour sélectionner l'entrée-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Velouté de légumes d'antan</h3>
                     <p class="menu__details">Carottes, panais, topinambour<span class="menu__price">35 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur de l'entrée permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--third-apparition">
-
+                <!--div contenant les éléments de l'entrée : titre, parapgraphe et le check pour sélectionner l'entrée-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Soupe à l'oignon</h3>
-
                     <p class="menu__details">Revisitée<span class="menu__price">20 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
 
         </section>
-
+        <!--section contenant les menus des plats-->
         <section class="menu">
-
+            <!--partie "plats" avec un titre et une div pour le soulignement-->
             <div class="menu__title-container">
-
                 <h2 class="menu__heading">PLATS</h2>
-
                 <div class="menu__underline"></div>
-
             </div>
-
+            <!-- conteneur du plat permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--first-apparition">
-
+                <!--div contenant les éléments du plat : titre, parapgraphe et le check pour sélectionner le plat-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Coquilles Saint-Jacques</h3>
                     <p class="menu__details">Accompagnée d'une purée de panais<span class="menu__price">40 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur du plat permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--second-apparition">
-
+                <!--div contenant les éléments du plat : titre, parapgraphe et le check pour sélectionner le plat-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Magret de canard</h3>
                     <p class="menu__details">Et parmentier de pommes de terres<span class="menu__price">35 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
             </div>
-
+            <!-- conteneur du plat permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--third-apparition">
-
+                <!--div contenant les éléments du plat : titre, parapgraphe et le check pour sélectionner le plat-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Pigeonneau d'Ille-et-Vilaine</h3>
-
                     <p class="menu__details">Sur son lit de gnocchis aux légumes<span class="menu__price">44 €</span>
                     </p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
 
         </section>
-
+        <!--section contenant les menus des desserts-->
         <section class="menu">
-
+            <!--partie "desserts" avec un titre et une div pour le soulignement-->
             <div class="menu__title-container">
-
                 <h2 class="menu__heading">DESSERTS</h2>
                 <div class="menu__underline"></div>
-
             </div>
-
+            <!-- conteneur du dessert permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--first-apparition">
-
+                <!--div contenant les éléments du dessert : titre, paragraphe et le check pour sélectionner le dessert-->
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Pétales de violettes glacées</h3>
                     <p class="menu__details">Et purée de noisettes<span class="menu__price">18 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur du dessert permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--second-apparition">
-
+                <!--div contenant les éléments du dessert : titre, parapgraphe et le check pour sélectionner le dessert-->
                 <div class="menu__container-selection">
-
                     <h3 class="menu__name">Fondant au chocolat</h3>
                     <p class="menu__details">Revisité<span class="menu__price">22 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
-
+            <!-- conteneur du dessert permettant de positionner le bloc d'éléments et régler l'animation pour le faire apparaître-->
             <div class="menu__selection menu__selection--third-apparition">
-
+                <!--div contenant les éléments du dessert : titre, parapgraphe et le check pour sélectionner le dessert-->
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Millefeuille croustillant</h3>
                     <p class="menu__details">Myrtilles et pâte d'amande<span class="menu__price">23 €</span></p>
+                    <!--div de l'animation check apparaissant avec un clic en version mobile et avec le survol pour les version tablettes et desktop-->
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
-
             </div>
 
         </section>
-
+        <!--div avec bouton pour commander les plats-->
         <div class="button-container">
             <button class="button-action">
                 Commander
@@ -200,22 +185,23 @@
     </main>
 
     <footer>
+        <!--pied de page avec le menu de navigation pour le site-->
         <nav class="nav">
+            <!--logo du site-->
             <h2 class="nav__logo">ohmyfood</h2>
+            <!--liste des liens du site-->
             <ul class="nav__container">
-                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
-                            class="fa-solid fa-utensils"></i>Proposer un
-                        restaurant</a></li>
-                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
-                            class="fa-solid fa-handshake-angle fa-sm"></i>Devenir
-                        partenaire</a></li>
+                <!--premier lien avec une icone qui renverrons vers les propositions de restaurants-->
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <!--deuxième lien avec une icone qui renverrons vers les propositions de partenariat-->
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i class="fa-solid fa-handshake-angle fa-sm"></i>Devenir partenaire</a></li>
+                <!--troisième lien qui renverra vers les mentions légales-->
                 <li><a class="nav__link nav__link--color" href="#" title="click here">Mentions légales</a></li>
-                <li><a class="nav__link nav__link--color" href="mailto:example@example.com"
-                        title="click here">Contact</a></li>
+                <!--quatrième lien qui renvoie et active le mail de contact-->
+                <li><a class="nav__link nav__link--color" href="mailto:example@example.com" title="click here">Contact</a></li>
             </ul>
         </nav>
     </footer>
-
 
 </body>
 
